# divineapi-python

./: LICENSE  README.md  pyproject.toml  setup.py
divineapi/: __init__.py  calculators.py  client.py  exceptions.py  horoscope.py  lifestyle.py  numerology.py  pdf.py
divineapi/indian/: __init__.py  festival.py  kundli.py  match_making.py  panchang.py
divineapi/western/: __init__.py  _house_system.py  composite.py  natal.py  planet_returns.py  prenatal.py  progressions.py  synastry.py  transit.py
