[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "divineapi"
version = "1.2.0"
description = "Official Python SDK for the Divine API - Astrology, Numerology, Tarot & more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Divine API", email = "support@divineapi.com"},
]
keywords = ["astrology", "horoscope", "numerology", "tarot", "kundli", "divineapi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.20.0",
]

[project.urls]
Homepage = "https://divineapi.com"
Documentation = "https://divineapi.com/docs"
Repository = "https://github.com/DivineAPI/divineapi-python"
Issues = "https://github.com/DivineAPI/divineapi-python/issues"

[tool.setuptools.packages.find]
include = ["divineapi*"]
